# transcoder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  api.http  docker-compose.yml
api/: Cargo.toml
api/src/: app.rs  main.rs  state.rs
api/src/models/: radarr.rs  sonarr.rs
api/src/routers/: task.rs
api/src/routes/: radarr.rs  sonarr.rs
api/src/services/: task.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: list.rs  mod.rs  transcode.rs
lib/: Cargo.toml
lib/src/: config.rs  discord.rs  ffmpeg.rs  ffprobe.rs  lib.rs  log.rs  utils.rs
sample/: radarr-webhook.json  sonarr-webhook.json
src/: api.go  discord.go  ffmpeg.go  ffprobe.go  go.mod  go.sum  main.go  radarr.go  task.go
