[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib" }
axum = { version = "0.8.4" }
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
tower-http = { version = "0.6.6", features = ["trace"] }
log = { version = "0.4.27" }
